test/sema/assignment.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo(): unit {}

fn bar(): number { return 1.0; }

fn main(): unit {
    mut x: number = 1.0;

    x = foo();

    let y: number = 3.0;
    
    y = 3.0;

    // CHECK: [[# @LINE + 1 ]]:5: error: cannot assign to rvalue
    bar = 3.0;

    // CHECK: [[# @LINE + 1 ]]:5: error: cannot assign to rvalue
    foo = 3.0;

    // CHECK: [[# @LINE + 1 ]]:7: error: cannot assign to rvalue
    1 + 1 = 2;

    let z: number;
    z = 3.0;
}

fn assignParam(x: number): unit {
    // CHECK: [[# @LINE + 1 ]]:7: error: 'x' cannot be mutated
    x = 1.0;
}
